--- a/style.css
+++ b/style.css
@@ -14,6 +14,14 @@ h1{
 
     margin: 0;
     padding: 0;
+    font-size: 100px;
+    color: #ffffff;
+    font-family: sans-serif;
+}
+b{
+  
+    margin: 0;
+    padding: 0;
     font-size: 120px;
     color: #ffffff;
     font-family: sans-serif;
